fixed chart scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -299,6 +299,26 @@ table {
 }
 
 
+.chart-container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+  background-color: #f5f5f5;
+}
+
+.chart-container::-webkit-scrollbar {
+  width: 30px;
+  height:30px;
+  background-color: #f5f5f5;
+}
+
+.chart-container::-webkit-scrollbar-thumb {
+  border-radius: 30px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+
+
 .button{
   position:absolute;
   width:100%;
